[Fix] - Fixes nav bar to remain fixed over banner with z-index

--- a/pat-ui/client/public/style.css
+++ b/pat-ui/client/public/style.css
@@ -43,24 +43,27 @@ body {
 
 .nav-right {
   display: flex;
-  width: 8%;
+  width: 15%;
 	margin-left: 2%;
   margin-right: 1%;
-  margin-top: 1%;
-  min-height: 1px;
+  /* margin-top: 1%; */
+  /* min-height: 1px; */
   flex-wrap: wrap;
   justify-content: center;
-  align-items: flex-end;
+  align-items: center;
   background-color: black;
   color: white;
   border: none;
+  font-size: 1vw;
+  top: 0;
   /* margin-bottom: 1%; */
 }
 
 .banner-container {
+  position: relative;
   height: 70vw;
   width: 100%;
-  margin-top: 3%;
+  /* margin-top: 3%; */
   /* max-height: 30%; */
   /* max-width: auto; */
   overflow: hidden;
@@ -70,21 +73,25 @@ body {
   background-position-x: 50%;
   background-position-y: 50%;
   background-repeat: no-repeat;
-  /* border: 5px solid green; */
+  border: 5px solid green;
+  z-index: -1;
 }
 
-.banner {
-  width: 100%;
-  height: 100%;
+/* .banner { */
+  /* width: 100%; */
+  /* height: 100%; */
   /* opacity: 0.75; */
-  background-position: center;
+  /* background-position: center; */
   /* border: 1px solid red; */
   /* background-position-x: 50%; */
-}
+/* } */
 
 .banner-text {
-  position: relative;
-  top: -30vh;
+  position: absolute;
+  /* top: 0; */
+  bottom: 6vw;
+  left: 8vw;
+  /* top: -30vh; */
   color: black;
   font-size: 10vw;
 }
@@ -253,7 +260,7 @@ body {
   font-size: 1vw;
 }
 
-@media only screen and (max-width: 700px)  {
+@media only screen and (max-width: 750px)  {
   .nav-container {
     display: flex;
     flex-direction: column;
